<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/actTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/pageTitle"
    android:textStyle="bold"
    android:textSize="30sp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="50dp"/>

  <ImageView
    android:id="@+id/profileImage"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:adjustViewBounds="true"
    android:maxWidth="150dp"
    android:maxHeight="150dp"
    app:srcCompat="@drawable/idema"
    android:background="@drawable/rounded_background"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/actTitle"
    android:layout_marginTop="50dp"
    android:contentDescription="@string/profileImage" />

  <TextView
    android:id="@+id/firstName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/firstName"
    android:layout_below="@+id/profileImage"
    android:layout_marginTop="35dp"
    android:textStyle="bold"
    android:textSize="15sp"
    android:padding="10dp"
    />

  <TextView
    android:id="@+id/lastName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/firstName"
    android:layout_marginTop="10dp"
    android:text="@string/lastName"
    android:textStyle="bold"
    android:textSize="15sp"
    android:padding="10dp"/>

  <TextView
    android:id="@+id/emailAddress"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/emailAddress"
    android:layout_below="@+id/lastName"
    android:layout_marginTop="10dp"
    android:textStyle="bold"
    android:textSize="15sp"
    android:padding="10dp"/>

  <TextView
    android:id="@+id/phoneNumber"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/phoneNumber"
    android:layout_below="@+id/emailAddress"
    android:layout_marginTop="10dp"
    android:textStyle="bold"
    android:textSize="15sp"
    android:padding="10dp"/>

  <Button
    android:id="@+id/logoutButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/logout"
    android:layout_below="@+id/phoneNumber"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="100dp"/>

</RelativeLayout>